# gemnr

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  run_interactive.py
src/gemnr/: __init__.py  gemnr.py
src/gemnr/backbones/: __init__.py
src/gemnr/backbones/flux/: __init__.py  flux_api.py  pipeline_flux2_klein.py  pipeline_flux_kontext.py
src/gemnr/backbones/qwen/: __init__.py  qwen_api.py
src/gemnr/core/: __init__.py  gem_warper.py
src/gemnr/core/utils/: basic_processing.py  depth_anything.py  geometry.py  rasterization.py  roma.py
src/gemnr/datasets/: __init__.py  scene_dataset.py
src/gemnr/datasets/dreambooth/: __init__.py
src/gemnr/datasets/mipnerf360/: __init__.py
src/gemnr/datasets/spinnerf/: __init__.py
src/gemnr/evaluation/: metrics_clip.py  metrics_epipolar.py  metrics_met3r.py  metrics_utils.py
src/gemnr/evaluation/viz/: viz_epipolar.py  viz_met3r.py  viz_utils.py
third_parties/Depth-Anything-3-dev/: pyproject.toml
third_parties/Depth-Anything-3-dev/src/depth_anything_3/: api.py
third_parties/Depth-Anything-3-dev/src/depth_anything_3/utils/export/: glb.py
third_parties/RoMa-0.0.1/roma/models/: __init__.py  encoders.py  encoders_old.py  matcher.py  matcher_backup.py  matcher_old.py
third_parties/RoMa-0.0.1/roma/models/model_zoo/: __init__.py  roma_models.py
third_parties/RoMa-0.0.1/roma/models/transformer/: __init__.py
